--- a/styles.css
+++ b/styles.css
@@ -125,6 +125,39 @@ body{
       height: 300px;
       align-content: center;
       align-items: center;
+      flex-wrap: wrap;
+    }
+    #telefono-z{
+      width: 450px;
+      height: 660px;
+      margin-left: 160px;
+      float: left;
+    }
+    #description{
+      font-size: 40px;
+      
+    }
+    #planet{
+      margin-left: 400px;
+      margin-right: 320px;
+    }
+    #main-3{
+      position: absolute;
+      display: flex;
+      flex-direction: row;
+      top: 2170px;
+      max-width: 90%;
+      height: 40%;
+      flex-wrap: wrap;
+    }
+    .muestra{
+      width: 800px;
+    }
+    #invitados{
+      position: absolute;
+      top: 2000px;
+      margin-left: 200px;
+      font-size: 40px;
     }
     .grid-container{
         
@@ -161,7 +194,7 @@ body{
     text-align: center;
     background-image: linear-gradient(225deg, #0000FF 0%, #0000A3 100%);
     clip-path: polygon(0px 20.45%, 100.41% 26px, 101.1% 99.55%, 3px 100.18%);
-    width: 1450px;
+    width: 100%;
     height: 550px;
     margin: auto;
     padding-top: 250px;
@@ -172,7 +205,7 @@ body{
     
   }
   button.mas-episodios{
-    margin-left: 550px;
+    margin-left: 39%;
   }
   .mas-episodios{
     text-decoration: none;
