--- a/styles.css
+++ b/styles.css
@@ -43,7 +43,7 @@ body{
 .grid-container{
     display: grid;
     gap: 10px;
-    grid-template: 
+    grid-template:
     "navbar" 50px /*AJUSTES DE ALTURA MOBILE*/
     "header" 350px
     "main"   3500px
@@ -66,7 +66,7 @@ body{
   a:active{
     text-decoration: none;
     color: black;
-    
+
 }
  /*AJUSTES DESKTOP */
 @media (min-width:600px) {
@@ -76,7 +76,7 @@ body{
       margin-bottom: 10px;
       font-family: 'IBM Plex Sans', monospace;
       font-weight: 400;
-    
+
     }
     #tachado{
       text-decoration: line-through;
@@ -135,7 +135,7 @@ body{
     }
     #description{
       font-size: 40px;
-      
+
     }
     #planet{
       margin-left: 400px;
@@ -160,7 +160,7 @@ body{
       font-size: 40px;
     }
     .grid-container{
-        
+
         grid-template-rows: 200px 350px 2900px 1050px 100px; /*AJUSTES DE ALTURA DESKTOP */
         grid-template-areas:
         "navbar"
@@ -199,10 +199,10 @@ body{
     margin: auto;
     padding-top: 250px;
   }
-  h2{ 
+  h2{
     color: #FFFFFF;
     font-size: 42px;
-    
+
   }
   button.mas-episodios{
     margin-left: 39%;
@@ -353,11 +353,11 @@ body{
         text-align: center;
         font-family: 'IBM Plex Sans', sans-serif;
         font-weight: 600;
-        
+
       }
     .fotos-temas{
         width: 100px;
-        
+
       }
     #titulo-nuestros-temas{
         padding: 3px 3px 3px 3px;
@@ -411,4 +411,200 @@ body{
         text-align: center;
         padding-top: 15px;
       }
+}
+
+body {
+    overflow-x: hidden;
+    color: #060a24;
+}
+
+nav {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 3;
+    background: white;
+}
+
+.nav-container {
+    padding: 0.5rem 0;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: row;
+    flex-direction: row;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
+}
+
+.nav-container .logo {
+    width: 1.5rem;
+    padding: 0;
+}
+
+.nav-container .logo img {
+    width: 100%;
+    border-radius: 2rem;
+}
+
+.nav-container .logo img:hover {
+    -webkit-animation: rotate360 0.5s;
+    animation: rotate360 0.5s;
+}
+
+.nav-container label {
+    cursor: pointer;
+}
+
+.nav-container .mobile-button {
+    display: block;
+    position: relative;
+    width: 1.75rem;
+    height: 4px;
+    margin: 0.3rem 0;
+    border-radius: 5px;
+    background-color: black;
+    content: "";
+    cursor: pointer;
+    -webkit-transition: 0.25s ease-in-out;
+    transition: 0.25s ease-in-out;
+}
+
+.nav-container #toggle:checked ~ .hamburger > .mb-mid {
+    visibility: hidden;
+}
+
+.nav-container #toggle:checked ~ .hamburger > .mb-top {
+    width: 1.65rem;
+    -webkit-transform-origin: left top;
+    transform-origin: left top;
+    -webkit-transform: rotate(45deg);
+    transform: rotate(45deg);
+}
+
+.nav-container #toggle:checked ~ .hamburger > .mb-bot {
+    width: 1.65rem;
+    -webkit-transform-origin: left bottom;
+    transform-origin: left bottom;
+    -webkit-transform: rotate(-45deg);
+    transform: rotate(-45deg);
+}
+
+.nav-container #toggle {
+    display: none;
+}
+
+.nav-container #toggle:checked ~ .menu-items {
+    display: block;
+}
+
+@media screen and (min-width: 600px) {
+    .nav-container {
+        padding: 0.8rem 0;
+    }
+    .nav-container .logo {
+        width: 2rem;
+    }
+}
+
+@media screen and (min-width: 1200px) {
+    .nav-container {
+        padding: 1.1rem 0;
+    }
+    .nav-container .logo {
+        padding: 0 0.5rem;
+        width: 3.25rem;
+    }
+    .nav-container #toggle:checked ~ .menu-items,
+    .nav-container #toggle:not(:checked) ~ .menu-items {
+        position: relative;
+        width: auto;
+        margin: 0.5rem 0;
+        padding: 0rem;
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-orient: horizontal;
+        -webkit-box-direction: normal;
+        -ms-flex-flow: row wrap;
+        flex-flow: row wrap;
+        background-color: white;
+    }
+    .nav-container #toggle,
+    .nav-container .hamburger {
+        display: none;
+    }
+}
+
+.menu-items {
+    display: none;
+    position: absolute;
+    left: 0;
+    top: 1.25rem;
+    width: 100%;
+    margin-top: 1.75rem;
+    padding: 1rem 0.5rem;
+    color: white;
+    background-color: #0000ec;
+}
+
+.menu-items li {
+    text-transform: uppercase;
+}
+
+.menu-items li a {
+    display: block;
+    padding: 1rem;
+}
+
+@media screen and (min-width: 600px) {
+    .menu-items {
+        top: 2rem;
+    }
+}
+
+@media screen and (min-width: 1200px) {
+    .menu-items {
+        top: unset;
+    }
+    .menu-items li a {
+        display: inline-block;
+        margin-left: 1rem;
+        padding: 0.25rem 1rem;
+        color: #060a24;
+    }
+}
+
+.header-container {
+    position: relative;
+    margin-top: 6rem;
+}
+
+.header-container h1 {
+    padding-right: 4rem;
+}
+
+.header-container p {
+    margin-bottom: 2.25rem;
+}
+
+@media screen and (min-width: 600px) {
+    .header-container {
+        margin-bottom: -1rem;
+    }
+}
+
+@media screen and (min-width: 1200px) {
+    .header-container {
+        -webkit-box-orient: horizontal;
+        -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+        flex-direction: row;
+        margin-top: 8rem;
+        margin-bottom: -4rem;
+    }
+    .header-container p {
+        max-width: 60%;
+    }
 }
